fix navbar height on mobile

--- a/resources/sass/components/_navbar.scss
+++ b/resources/sass/components/_navbar.scss
@@ -55,8 +55,10 @@
   }
 
   &__primary {
-    height: $navbar-height;
-    line-height: $navbar-height;
+    .container {
+      height: $navbar-height;
+      line-height: $navbar-height;
+    }
   }
 
   &__secondary {
